5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4365/executions/1649_2703.log
== TEST (2019-04-16 00:57:44) 
-- CODE:
num = int(input("numero inteiro"))
-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:58:29) 
-- CODE:
ida = int(input("numero inteiro"))
-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:59:10) 
-- CODE:
ida = int(input("digite sua idade"))
-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:59:43) 
-- CODE:
ida = int(input("digite sua idade:"))
-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:01:19) 
-- CODE:
ida = int(input("digite sua idade:"))
if ( ida > 18):
-- ERROR:
File "XXXX", line 3
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:01:46) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
-- ERROR:
File "XXXX", line 3
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:02:31) 
-- CODE:
ida = int(input("digite sua idade:"))
if(ida>18)
-- ERROR:
File "XXXX", line 2
    if(ida>18)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:02:44) 
-- CODE:
ida = int(input("digite sua idade:"))
if(ida>18):
-- ERROR:
File "XXXX", line 3
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:02:53) 
-- CODE:
ida = int(input("digite sua idade:"))
if(ida>18):
-- ERROR:
File "XXXX", line 3
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:04:13) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
-- ERROR:
File "XXXX", line 3
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:05:08) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
-- ERROR:
File "XXXX", line 3
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:07:16) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else ("nao_eleitor".lowe())
-- ERROR:
File "XXXX", line 4
    else ("nao_eleitor".lowe())
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:09:13) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
print("nao_eleitor".lowe())
-- ERROR:
File "XXXX", line 5
    print("nao_eleitor".lowe())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 01:09:36) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
print("nao_eleitor".lower())
-- EXECUTION TIME:
0.156137
-- ERROR:
  File "/home/codebench/codes/1649/2703/main.py", line 5
    print("nao_eleitor".lower())
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:09:42) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
print("nao_eleitor".lower())
-- ERROR:
File "XXXX", line 5
    print("nao_eleitor".lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:10:12) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
print("nao_eleitor.".lower())
-- ERROR:
File "XXXX", line 5
    print("nao_eleitor.".lower())
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:10:56) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
   print("nao_eleitor".lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 01:11:03) 
-- CODE:
ida = int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
   print("nao_eleitor".lower())
-- EXECUTION TIME:
0.207823
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
